--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,9 @@
 /* You can add global styles to this file, and also import other style files */
+
+.bajo-el-nav {
+    margin-top: 210px;
+}
+
+.mb-2 {
+    margin-bottom: 2em;
+}
