--- a/src/app/components/pages/home.component.html
+++ b/src/app/components/pages/home.component.html
@@ -11,7 +11,9 @@
         </div>
         <div class="item">
             <div class="well">
-                <img src="../../../assets/images/africa-hands-on_home-625x664.jpg" alt="">
+                <a [routerLink]="['/aho']">
+                    <img src="../../../assets/images/africa-hands-on_home-625x664.jpg" alt="">
+                </a>
             </div>
         </div>
         <div class="item">
@@ -36,12 +38,16 @@
         </div>
         <div class="item">
             <div class="well">
-                <img src="../../../assets/images/ravn_extract-landing-page.jpg" alt="">
+                <a [routerLink]="['/landing-page']">
+                    <img src="../../../assets/images/ravn_extract-landing-page.jpg" alt="">
+                </a>
             </div>
         </div>
         <div class="item">
             <div class="well">
-                <img src="../../../assets/images/cruz_website-625x1127.png" alt="">
+                <a [routerLink]="['/cj-fine-arts']">
+                    <img src="../../../assets/images/cruz_website-625x1127.png" alt="">
+                </a>
             </div>
         </div>
         <div class="item">
