fixed bug on home.component.html

--- a/src/app/components/pages/home.component.html
+++ b/src/app/components/pages/home.component.html
@@ -1,16 +1,13 @@
 <app-jumbotron></app-jumbotron>
 <div class="container">
-
-<<<<<<< Updated upstream
-  <div class="row">
-    <div class="item">
-      <div class="well">
-        <a routerLink='/responsive-web-apps'>
-          <img src="../../../assets/images/ravn-plus_dashboard-625x601.jpg" alt="">
-        </a>
-      </div>
-=======
     <div class="row">
+        <div class="item">
+            <div class="well">
+                <a routerLink='/responsive-web-apps'>
+                    <img src="../../../assets/images/ravn-plus_dashboard-625x601.jpg" alt="">
+                </a>
+            </div>
+        </div>
         <div class="item">
             <div class="well">
                 <a routerLink='/responsive-web-apps'>
@@ -73,69 +70,69 @@
                 <img src="../../../assets/images/with-cotton-and-linen_proto-625x319.jpg" alt="">
             </div>
         </div>
->>>>>>> Stashed changes
+        <div class="item">
+            <div class="well">
+                <a [routerLink]="['/aho']">
+                    <img src="../../../assets/images/africa-hands-on_home-625x664.jpg" alt="">
+                </a>
+            </div>
+        </div>
+        <div class="item">
+            <div class="well">
+                <img src="../../../assets/images/ravn_business-cards-625x352.jpg" alt="">
+            </div>
+        </div>
+        <div class="item">
+            <div class="well">
+                <img src="../../../assets/images/ravn_brand-guides-625x442.png" alt="">
+            </div>
+        </div>
+        <div class="item">
+            <div class="well">
+                <img src="../../../assets/images/ravn_filter-feature-625x307.jpg" alt="">
+            </div>
+        </div>
+        <div class="item">
+            <div class="well">
+                <img src="../../../assets/images/ravn_website-625x720.jpg" alt="">
+            </div>
+        </div>
+        <div class="item">
+            <div class="well">
+                <a [routerLink]="['/landing-page']">
+                    <img src="../../../assets/images/ravn_extract-landing-page.jpg" alt="">
+                </a>
+            </div>
+        </div>
+        <div class="item">
+            <div class="well">
+                <a [routerLink]="['/cj-fine-arts']">
+                    <img src="../../../assets/images/cruz_website-625x1127.png" alt="">
+                </a>
+            </div>
+        </div>
+        <div class="item">
+            <div class="well">
+                <a [routerLink]="['/teran-frias']">
+                    <img src="../../../assets/images/teran-frias_website-625x615.jpg" alt="">
+                </a>
+            </div>
+        </div>
+        <div class="item">
+            <div class="well">
+                <a [routerLink]="['/several-websites']">
+                    <img src="../../../assets/images/with-cotton-and-linen_proto-625x319.jpg" alt="">
+                </a>
+            </div>
+        </div>
+        <div class="item">
+            <div class="well">
+                <a [routerLink]="['/construct']">
+                    <img src="../../../assets/images/construct_website-625x631.png" alt="">
+                </a>
+            </div>
+        </div>
     </div>
-    <div class="item">
-      <div class="well">
-        <a [routerLink]="['/aho']">
-          <img src="../../../assets/images/africa-hands-on_home-625x664.jpg" alt="">
-        </a>
-      </div>
-    </div>
-    <div class="item">
-      <div class="well">
-        <img src="../../../assets/images/ravn_business-cards-625x352.jpg" alt="">
-      </div>
-    </div>
-    <div class="item">
-      <div class="well">
-        <img src="../../../assets/images/ravn_brand-guides-625x442.png" alt="">
-      </div>
-    </div>
-    <div class="item">
-      <div class="well">
-        <img src="../../../assets/images/ravn_filter-feature-625x307.jpg" alt="">
-      </div>
-    </div>
-    <div class="item">
-      <div class="well">
-        <img src="../../../assets/images/ravn_website-625x720.jpg" alt="">
-      </div>
-    </div>
-    <div class="item">
-      <div class="well">
-        <a [routerLink]="['/landing-page']">
-          <img src="../../../assets/images/ravn_extract-landing-page.jpg" alt="">
-        </a>
-      </div>
-    </div>
-    <div class="item">
-      <div class="well">
-        <a [routerLink]="['/cj-fine-arts']">
-          <img src="../../../assets/images/cruz_website-625x1127.png" alt="">
-        </a>
-      </div>
-    </div>
-    <div class="item">
-      <div class="well">
-        <a [routerLink]="['/teran-frias']">
-          <img src="../../../assets/images/teran-frias_website-625x615.jpg" alt="">
-        </a>
-      </div>
-    </div>
-    <div class="item">
-      <div class="well">
-        <a [routerLink]="['/several-websites']">
-          <img src="../../../assets/images/with-cotton-and-linen_proto-625x319.jpg" alt="">
-        </a>
-      </div>
-    </div>
-    <div class="item">
-      <div class="well">
-        <a [routerLink]="['/construct']">
-          <img src="../../../assets/images/construct_website-625x631.png" alt="">
-        </a>
-      </div>
-    </div>
-  </div>
+    <!-- end of row -->
 </div>
+<!-- end of container -->
